--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @layer components{
 
     .SideBarIcon{
-        @apply relative flex items-center justify-center h-12 w-12 mt-4 mb-2 mx-auto shadow-lg bg-gray-800 text-green-500 hover:bg-green-600 hover:text-gray-200 rounded-e-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer !important;
+        @apply relative flex items-center justify-center h-12 w-12 mt-4 mb-2 mx-auto shadow-lg bg-fuchsia-600 text-cyan-100 hover:bg-pink-300 hover:text-gray-200 rounded-e-3xl hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer !important;
     }
 
 }
